src/deploy/k8s/05-potal-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potal-backend
  namespace: oneapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potal-backend
  template:
    metadata:
      labels:
        app: potal-backend
    spec:
      containers:
        - name: potal-backend
          image: registry.inviv.vn/oneapi/potal-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: potal-backend
  namespace: oneapi
spec:
  type: NodePort
  selector:
    app: potal-backend
  ports:
    - name: http
      port: 8081
      targetPort: http
      nodePort: 30084
