src/deploy/k8s/06-potal-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potal-frontend
  namespace: oneapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potal-frontend
  template:
    metadata:
      labels:
        app: potal-frontend
    spec:
      containers:
        - name: potal-frontend
          image: registry.inviv.vn/oneapi/potal-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: potal-frontend
  namespace: oneapi
spec:
  type: NodePort
  selector:
    app: potal-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30083
