src/deploy/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneapi
  namespace: oneapi
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: 1api.click
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: new-api-user-portal
                port:
                  number: 3010
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potal-frontend
                port:
                  number: 80
    - host: api.1api.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potal-backend
                port:
                  number: 8081
    - host: new.api.1api.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: new-api
                port:
                  number: 3000
